# vaultbank_web

./: .gitignore  AGENT_GUIDE.md  API.md  CLAUDE.md  CONTRIBUTING.md  FILE_STORAGE_MIGRATION.md  NEXT_SESSION.md  README.md  SESSION_SUMMARY.md  STATE.md  WEB_SCREENSHOT.md  api_test_cookies.txt  cookies.txt  docker-compose.yml  nginx.conf  test_cookies.txt  test_mcp_direct.py  test_mcp_tools.py  test_state_persistence.py  web-compose.yml
.spec/: app_spec_path.txt  claude-progress.txt  feature_list.json  init.sh
backend/: .env.example  .gitignore  add_statements.py  pyproject.toml  requirements.txt  sample_banking_state.json
backend/app/: config.py  file_store.py  init_banking_data.py  main.py  models.py  schemas.py  state_store.py
backend/tests/: conftest.py  test_state_api.py  test_vaultbank_api.py
docs/: EXTENDING.md  TESTING.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  StateManage.jsx  apiClient.js  index.css  main.jsx  theme.js
frontend/src/__tests__/: App.test.jsx
frontend/src/components/: AccountCard.jsx  CookieHandler.jsx  PagePlaceholder.jsx  PageTransition.jsx  Sidebar.jsx  TopNavigation.jsx
frontend/src/contexts/: StateContext.jsx  StateContext.test.jsx
frontend/src/pages/: AccountDetails.jsx  BillPay.jsx  CreditCards.jsx  Dashboard.jsx  Investments.jsx  Loans.jsx  MobileDeposit.jsx  SearchResults.jsx  Settings.jsx  StateManage.jsx  Statements.jsx  Transfers.jsx
frontend/src/utils/: cookies.js  formatters.js  userProfile.js  (+1 more)
prompts/: app_spec.txt
